<resources>
    <string name="app_name">KACHIN STORY</string>
    <string name="a_name">GUMRAWNG GUMTSA KARAI MASA</string>
    <string name="b_name">Mung Masha Lawt Lam Gawgap Ya Ai Karai Masa</string>
    <string name="c_name">(Kachin Story Theology)</string>
    <string name="d_name">1. Dedication</string>
    <string name="e_name">2. Ga Machyen</string>
    <string name="f_name">3. Mau Mwi</string>
    <string name="g_name">4. Ninggawn Htung(Nature) hte Nhtan shai ai lam gaw mara re</string>
    <string name="h_name">5. Ninggun Machyu Tengman Repra Lam</string>
    <string name="i_name">6. Matsaw Ningtsa Hkang Lu ai Maroi Nli Let Hpyi Jahtau Ai Ga</string>
    <string name="j_name">7. Karai Kasang Madun Dan Ai Kasi Ningli</string>
    <string name="k_name">8. Magrau Grang Wunli Lawm Ai Ga Shaka</string>
    <string name="l_name">9. Mungga Nga Ai Kaw Tengman Lam Tam Ai Ni Nga ai</string>
    <string name="m_name">10.Ga Hpungdim</string>
    <string name="n_name">11.Shamyet Shanat Ai Laika ni</string>
    <string name="o_name">.............</string>
    <string name="p_name">        Moi shawng de Hpung-in Hka hku, Hkamung Naw
        Lungdawn makau e, Tingmai Ma Ja Ing (Tingnga ma Ja Ing)
        gaw shi a kasha ma chyangai hpe, hka
        makau gumtsai dan e shagwi da nna, shi gaw hka de
        hka shin baw hkrut rai nga ai.</string>
    <string name="q_name">        Shi hka shin ngut nna ma hpe hta ba na ngu yang
        ma gaw nnga mat sai. Hka la-ing de nbat hte nawng
        karawt dun bang ai hkang sha mu mada nu ai. </string>
    <string name="r_name">        Dai majaw shi gaw lapu e karawt mat wa sai ngu
        hkrak kam nna; “Aga! hka rap yang hka de di hkrat
        si ai gaw ninggawn htung re. Ya gaw hkarang e nga
        ai hpe nan, dun sha mat ai gaw nau nan tara lai ai”
        ngu hkrap let mu hpe jun dat wu ai gaw; “Matsaw
        ningtsa mu e, ndai Hkamung Naw Lungdawn daw u
        law… ningka nawng Baren shaw u law…yat di ladawng tu nga
        hkainyeng hte shanai na law…” ngu
        jahtau wu ai</string>
    <string name="s_name">        Shaloi mu nat htim sa nna, Hkamung Naw
        Lungdawn kata na lapu baren hpe achye shaw ai
        majaw Hkamung Naw Lungdawn mung daw mat sai.
        Lapu baren hpe gaw dai lungdawn ntsa e hpan di
        gren mara da wu ai. </string>
    <string name="t_name">        Dai hpang Tingmai ma Ja Ing gaw shi a ga sadi
        nga ai hte maren, ladawng tu ai nga hkainyeng hte
        mu nat hpe jawjau na matu hkyen wu timung, nga
        hkainyeng nlu tam wu ai. Nga hkainyeng a malai nga
        la shachyang hpe jaw ya na matu dumsa hkan tam
        wu yang, Dumsa Lalawn (Layawng, La Yau) ngu ai
        wa hpe saw la nna, jawjau wu ai</string>
    <string name="u_name">        Matsaw ningtsang na mu shabrang kasha ni mung,
        Nga Hkainyeng sa dun la na matu mungkan ga de
        du sa ma ai. Dumsa Lalawn dumsa ai hta Sharam
        hte Shara La (La Gang) a ga sadi nmai dung mat ai
        mabyin hpe shagawp nna tsun numni wu ai gaw,
        grai na pyaw nna matsan dum na zawn nga ai majaw,
        mu shabrang ni Hkainyeng a malai nga la
        shachyang hpe mu ga de dun wa ra ai kaw du hkra
        rai mat manu ai.</string>
    <string name="v_name">       Mu ga de du wa mayang, mu salang ni gaw hpa rai
       nna Nga La shachyang dun wa ma ai hpe san mu
       yang, mu shabrang ni gaw Dumsa Lalawn a shagawp
       numni ga naupyaw nna matsan dum na zawn nga ai
       majaw re lam tsun dan mu ai. Shaloi mu salang ni
       gaw teng n teng san jep yu na matu Dumsa Lalawn
       hpe mu ga de shaga ma ai. Dumsa Lalawn gaw mu
       nat ni hpe “Ngai sa mayu tim nanhte a mung ga de
       gaw kaning rai sa na I? ngu san wu ai. Shaloi mu
       nat ni gaw “Nang she sa na dawdan yang gaw, hkrun
       lam hkum tsang u anhte chye ga ai” ngu nta shinggan
        de woi pru wa ai. Shinggan de du ai hte rau “Ya
       myi di dat u” ngu ai hte maren Dumsa Lalawn myi di
       dat wu ai. Jahkring mi na jang “Ya myi hpaw dat u”
       ngu ai hte myi hpaw dat jang, mu ga de du taw nga
       nu ai</string>
    <string name="w_name">       Dumsa Lalawn hte hkrum jahta ngut ai hpang mu
       nat ni gaw shinggan de woi pru nna, nhpung kawng
       de woi sa ma ai. Shanhte gaw Dumsa Lalawn hpe
      “Sinna hkran de mada yu u” ngu tsun ma ai. Dumsa
       Lalawn mung mada yu yang, nta htinggaw lahkawng
       masum sha nga ai, akatsi katsang re ai kahtawng
       langai mi hpe mu wu ai.</string>
    <string name="x_name">       Dumsa Lalawn gaw dai kahtawng gaw kaning re
       ai kahtawng rai kun san yu wu ai. Shaloi shanhte
       gaw, “Dai kahtawng gaw Du Magam kahtawng, Du
       Ga re, moi gaw grai kaba ai kahtawng rai timung ya
       gaw, dai hte sha ngam mat sai” ngu tsun dan ma ai.
       Dumsa Lalawn mung grai kaba, htinggaw grai law
       ai kahtawng hpa majaw dai zawn byin mat ai lam
       hpe bai san yu wu yang, shanhte gaw “dai lam nang
       hpang de chye na ndai” ngu sha tsun dan ma ai.</string>
    <string name="y_name">       Dai hpang shanhte gaw “Sinpraw de mada yu u” ngu
       bai tsun ma ai. Dumsa Lalawn mung mada yu dat
       yang, nta htinggaw grai law nna, grai pyaw na zawn
       san ai, ra tsawm ai kahtawng kaba langai mi hpe
       mu mada wu ai. Shi gaw “Dai mare gaw kaning re ai
       mare rai nna dai kahtawng a mying gaw kaning ngu
       ai rai ta? ngu bai san wu ai. Shanhte mung, “Dai
       gaw Gumrawng Gumtsa mare re” ngu tsun dan ma
       ai.</string>
    <string name="z_name">       Dumsa Lalawn hte mu salang ni shada jahta hkat
       let gara hpan mare hpe ra sharawng ai lam Dumsa
       Lalawn hpe san wu yang, Dumsa Lalawn gaw
        gumrawng gumtsa mare hpe yu ra sharawng ai lam tsun
       dan wu ai. Mu nat ni mung dai lam byin wa hkra
       garum la lu ai lam tsun ma ai. Dai hpang mu nat ni
       gaw Dumsa Lalawn hpe nta nhku de woi wa nna,
       chyaru tsa mai-aw ndum sanit, shat nneng (nbaw)
       madawng sanit jaw dat mu ai</string>
    <string name="A_name">       Mu Nat ni htet dat ai gaw, “Nang dinghta ga de du
       yang, ndai mai-aw ndum langai mi hpe nanhte a
       tsa dumbung langai mi kaw ru bang jang dai tsa
       dumbung hpring wa na ra ai. Dai hte maren ndai
       shat nneng madawng langai mi hpe n-gawt langai mi
       kaw yan bang jang, shat nneng n-gawt mi byin wa na
       ra ai. Shaloi nang tsa dumbung sanit, shat nneng
        ngawt sanit lu na ndai. Dai tsa hte shat nneng ni hpe
       du magam n re ai, kawn chyinghkyi n noi ai mare
       masha ni zuphpawng nna sha mu” ngu htet dat ma
       ai</string>
    <string name="B_name">       Dumsa Lalawn mung mu nat ni htet dat ai hte
       maren galaw nna, du magam n lawm ai mare masha
       ni hpe shaga zuphpawng nna sha ma ai. Dai lam hpe
       du magam ni chye jang, “Numhti ni, myikrawk ni,
       hpawnun ni, anhte du ni hpe n shaga, nanhte chyu
       sha i?” ngu sharim tsun ma ai. Raitim mare masha
       ni gaw dai shat nneng hte tsa lu ai kaw nna, hkrit
       myit n rawng ai sha, shanhte hpe mahtang, “Hpa
       baw du du, anhte du n ra ga ai” ngu, dai shani kaw
       nna du ni hpe hkap kasat, kawn chyinghkyi dawm
       kau ya manu ai. </string>
    <string name="C_name">       Mu nat ni garum dat ai hta nap ngu ai hpri nhtu
       chyahkrung, hpagup hte ninggang ni lawm ai. Ndai
       hpyen rai ni hpe gumlau majan ngut ai hpang Mali
       Hka de kabai bang kau masai. Raitim, ndai hpyen
       rai langai ngai hkarang de kawq pru wa ai raiyang,
       dai shara hta gumlau rawt uga! ngu nna matan da
       ma ai.</string>
    <string name="D_name">       Dai hpang dai mu nat ni jaw dat ai hpyen rai hta na
       ninggang mahtang, Nbun Daru makau e kawq pru
       wa nna, dai makau grupyin hta gumchying gumsa
       rawt malan ai lam lang mi bai paw pru wa sai rai.
       Gumrawng Gumtsa up hkang ai masa hta du ni
       nga tim kawn chyinghkyi noi ai du ni nnga sai sha,
       tinang magam wa la htan bam, ngu ai myit jasat hte
       agyi, salang, mung du wa ngu ai hku nna up hkang
       mat wa sai rai. Ndai up hkang masa hpe Englik prat
       hta tawngchuk, agyi, salang ngu naw matut shagrin
       da ya ai lam mu lu ai</string>
    <string name="E_name">MAW MWI</string>
    <string name="F_name">    Ninggawn Htung (Nature) hte
    Nhtan Shai ai lam gaw Mara Re</string>
</resources>