<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <ScrollView
        android:layout_width="416dp"
        android:layout_height="638dp"
        android:layout_marginTop="103dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/p_name" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="384dp"
                android:layout_height="331dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/jsj" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/q_name" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/los" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/r_name" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="384dp"
                android:layout_height="465dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/koj" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/s_name" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="384dp"
                android:layout_height="475dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/pso" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/t_name" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="386dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/mps" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/u_name" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="384dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/hos" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/v_name" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/xox" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/w_name" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="381dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/dos" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/x_name" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="381dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/cso" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/y_name" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="381dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/box" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/z_name" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/aoz" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/A_name" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="373dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/jpk" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/B_name" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="374dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/gfg" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/C_name" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="366dp"
                android:layout_height="445dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/fpx" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/D_name" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/end" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="165dp"
        android:text="@string/E_name"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>